--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Bradley Reynolds <bradley.reynolds@darbia.dev>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = "1.14.0" # { version = "1.14.0", features = ["cargo"] }
+tokio = { version = "1.14.0", features = ["full"] }
 clap = { version = "3.0.0-beta.5", features = ["cargo"] }
 clap_generate = "3.0.0-rc.4"
 serde = { version = "1.0", features = ["derive"] }
