--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 tracing-appender = "0.2"
 business_central = { git = "https://github.com/darbiadev/business-central-rs" }
+zendesk = { git = "https://github.com/darbiadev/zendesk-rs" }
 figment = { version = "0.10.6", features = ["env", "toml"] }
 dirs = "4.0.0"
 futures = "0.3.18"
