--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ authors = ["Bradley Reynolds <bradley.reynolds@darbia.dev>"]
 [dependencies]
 tokio = { version = "1.14.0", features = ["full"] }
 clap = { version = "3.0.0-beta.5", features = ["cargo"] }
-clap_generate = "3.0.0-rc.4"
+clap_complete = "3.0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 reqwest = { version = "0.11", features = ["json"] }
