--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -270,10 +270,10 @@ jobs:
         shell: bash
         run: |
           mkdir completion
-          ./target/x86_64-unknown-linux-gnu/release/fido completions --shell bash > completion/fido.bash
-          ./target/x86_64-unknown-linux-gnu/release/fido completions --shell zsh > completion/_fido
-          ./target/x86_64-unknown-linux-gnu/release/fido completions --shell fish > completion/fido.fish
-          ./target/x86_64-unknown-linux-gnu/release/fido completions --shell powershell > completion/_fido.ps1
+          ./target/release/fido completions --shell bash > completion/fido.bash
+          ./target/release/fido completions --shell zsh > completion/_fido
+          ./target/release/fido completions --shell fish > completion/fido.fish
+          ./target/release/fido completions --shell powershell > completion/_fido.ps1
 
       - name: Build Debian release
         run: |
