--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -300,7 +300,7 @@ jobs:
   upload-release:
     name: upload-release
     runs-on: ubuntu-latest
-    needs: [ generate-choco, build-deb, build-msi ]
+    needs: [ build-deb, build-msi ]
     steps:
       - name: Get release version
         uses: actions/download-artifact@v2
