--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "fido"
+description = "Fido CLI"
 version = "0.1.0"
 edition = "2021"
 authors = ["Bradley Reynolds <bradley.reynolds@darbia.dev>"]
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/darbiadev/fido/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
