--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -205,7 +205,7 @@ jobs:
         run: |
           cargo install cargo-wix
           cargo wix init
-          cargo wix
+          cargo wix -vvvvv
 
       - name: Create release directory for artifact, move files
         shell: bash
