probably good now

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -205,14 +205,13 @@ jobs:
         run: |
           cargo install cargo-wix
           cargo wix init
-          cargo wix -vvvvv
+          cargo wix
 
       - name: Create release directory for artifact, move files
         shell: bash
         run: |
-          ls -lahR target/wix/
           mkdir release
-          mv target/wix/fido_${{ env.RELEASE_VERSION }}_x86_64_installer.msi release/
+          mv target/wix/fido-${{ env.RELEASE_VERSION }}-x86_64_installer.msi release/
 
       - name: Save release as artifact
         uses: actions/upload-artifact@v2
