--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -203,7 +203,7 @@ jobs:
       - name: Build msi file
         shell: powershell
         run: |
-          cargo install cargo-wix --version 0.3.1 --locked
+          cargo install cargo-wix
           cargo wix init
           cargo wix
 
@@ -211,7 +211,7 @@ jobs:
         shell: bash
         run: |
           mkdir release
-          mv fido_x86_64_installer.msi release/
+          mv target/wix/fido-${{ env.RELEASE_VERSION }}-x86_64.msi release/
 
       - name: Save release as artifact
         uses: actions/upload-artifact@v2
@@ -270,10 +270,10 @@ jobs:
         shell: bash
         run: |
           mkdir completion
-          ./target/x86_64-unknown-linux-gnu/release/fido completions --shell bash > completion/fido.bash
-          ./target/x86_64-unknown-linux-gnu/release/fido completions --shell zsh > completion/_fido
-          ./target/x86_64-unknown-linux-gnu/release/fido completions --shell fish > completion/fido.fish
-          ./target/x86_64-unknown-linux-gnu/release/fido completions --shell powershell > completion/_fido.ps1
+          ./target/release/fido completions --shell bash > completion/fido.bash
+          ./target/release/fido completions --shell zsh > completion/_fido
+          ./target/release/fido completions --shell fish > completion/fido.fish
+          ./target/release/fido completions --shell powershell > completion/_fido.ps1
 
       - name: Build Debian release
         run: |
@@ -297,61 +297,10 @@ jobs:
           name: release
           path: release
 
-  generate-choco:
-    needs: [ build-release ]
-    name: generate-choco
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
-
-      - uses: actions/setup-python@v2
-
-      - name: Get release version
-        uses: actions/download-artifact@v2
-        with:
-          name: release-version
-          path: release-version
-
-      - name: Set release version
-        shell: bash
-        run: |
-          release_version="$(cat ./release-version/release-version)"
-          echo "RELEASE_VERSION=$release_version" >> $GITHUB_ENV
-
-      - name: Validate release version
-        run: |
-          echo "Release version: ${{ env.RELEASE_VERSION }}"
-
-      - name: Get release artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: release
-          path: release
-
-      - name: Execute choco packaging script
-        run: |
-          python "./deployment/windows/choco/choco_packager.py" "./release/fido_i686-pc-windows-msvc.zip" "./release/fido_x86_64-pc-windows-msvc.zip" ${{ env.RELEASE_VERSION }} "./deployment/windows/choco/fido.nuspec.template" "./deployment/windows/choco/chocolateyinstall.ps1.template" "fido.nuspec" "tools/chocolateyinstall.ps1" "tools/"
-          zip -r choco.zip "fido.nuspec" "tools"
-
-      - name: Move release file into release directory
-        shell: bash
-        run: |
-          mv choco.zip release/
-
-      - name: Save release as artifact
-        uses: actions/upload-artifact@v2
-        with:
-          retention-days: 3
-          name: release
-          path: release
-
   upload-release:
     name: upload-release
     runs-on: ubuntu-latest
-    needs: [ generate-choco, build-deb, build-msi ]
+    needs: [ build-deb, build-msi ]
     steps:
       - name: Get release version
         uses: actions/download-artifact@v2
