--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ repository = "https://github.com/darbiadev/fido/"
 
 [dependencies]
 tokio = { version = "1.16.1", features = ["full"] }
-clap = { version = "3.0.0-beta.5", features = ["cargo"] }
-clap_complete = "3.0.4"
+clap = { version = "3.1.6", features = ["cargo"] }
+clap_complete = "3.1.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 reqwest = { version = "0.11", features = ["json"] }
