--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -54,6 +54,7 @@ jobs:
   upload-release:
     name: upload-release
     runs-on: ubuntu-latest
+    needs: [build-release]
     steps:
       - name: Get release version
         uses: actions/download-artifact@v3
