--- a/.github/workflows/build-releases.yml
+++ b/.github/workflows/build-releases.yml
@@ -144,6 +144,15 @@ jobs:
           args: --release --verbose --locked --target=${{ matrix.info.target }}
           use-cross: ${{ matrix.info.cross }}
 
+      - name: Generate completions
+        shell: bash
+        run: |
+          mkdir completion
+          ./target/${{ matrix.triple.target }}/release/fido completions --shell bash > completion/fido.bash
+          ./target/${{ matrix.triple.target }}/release/fido completions --shell zsh > completion/_fido
+          ./target/${{ matrix.triple.target }}/release/fido completions --shell fish > completion/fido.fish
+          ./target/${{ matrix.triple.target }}/release/fido completions --shell powershell > completion/_fido.ps1
+
       - name: Bundle release and completion (Windows)
         if: matrix.info.os == 'windows-2019'
         shell: bash
