--- a/.github/workflows/build-releases.yml
+++ b/.github/workflows/build-releases.yml
@@ -183,13 +183,13 @@ jobs:
           tar -C ./completion -czvf completion.tar.gz .
           mv completion.tar.gz release/
 
-      - name: Compress manpage files (Linux x86-64 GNU)
-        if: matrix.info.target == 'x86_64-unknown-linux-gnu' && matrix.info.container == ''
-        shell: bash
-        run: |
-          gzip ./manpage/fido.1
-          tar -C ./manpage -czvf manpage.tar.gz .
-          mv manpage.tar.gz release/
+      #      - name: Compress manpage files (Linux x86-64 GNU)
+      #        if: matrix.info.target == 'x86_64-unknown-linux-gnu' && matrix.info.container == ''
+      #        shell: bash
+      #        run: |
+      #          gzip ./manpage/fido.1
+      #          tar -C ./manpage -czvf manpage.tar.gz .
+      #          mv manpage.tar.gz release/
 
       - name: Save release as artifact
         uses: actions/upload-artifact@v2
