--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: skip_check
-        uses: fkirc/skip-duplicate-actions@master
+        uses: fkirc/skip-duplicate-actions@v5
         with:
           concurrent_skipping: "same_content_newer"
           skip_after_successful_duplicate: "true"
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v3
         if: ${{ steps.skip_check.outputs.should_skip != 'true' }}
 
-      - uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af
+      - uses: actions-rs/toolchain@v1
         if: ${{ steps.skip_check.outputs.should_skip != 'true' }}
         with:
           profile: minimal
@@ -37,7 +37,7 @@ jobs:
           override: true
           components: rustfmt
 
-      - uses: Swatinem/rust-cache@22c9328bcba27aa81a32b1bef27c7e3c78052531
+      - uses: Swatinem/rust-cache@v1
         if: ${{ steps.skip_check.outputs.should_skip != 'true' }}
 
       - run: cargo fmt --all -- --check
@@ -55,7 +55,7 @@ jobs:
           - windows-latest
     steps:
       - id: skip_check
-        uses: fkirc/skip-duplicate-actions@master
+        uses: fkirc/skip-duplicate-actions@v5
         with:
           concurrent_skipping: "same_content_newer"
           skip_after_successful_duplicate: "true"
@@ -65,7 +65,7 @@ jobs:
       - uses: actions/checkout@v3
         if: ${{ steps.skip_check.outputs.should_skip != 'true' }}
 
-      - uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af
+      - uses: actions-rs/toolchain@v1
         if: ${{ steps.skip_check.outputs.should_skip != 'true' }}
         with:
           profile: minimal
@@ -73,7 +73,7 @@ jobs:
           override: true
           components: clippy
 
-      - uses: Swatinem/rust-cache@22c9328bcba27aa81a32b1bef27c7e3c78052531
+      - uses: Swatinem/rust-cache@v1
         if: ${{ steps.skip_check.outputs.should_skip != 'true' }}
 
       - run: cargo clippy --all-targets --workspace -- -D clippy::all -D clippy::pedantic -D clippy::cargo
@@ -108,7 +108,7 @@ jobs:
 
     steps:
       - id: skip_check
-        uses: fkirc/skip-duplicate-actions@master
+        uses: fkirc/skip-duplicate-actions@v5
         with:
           concurrent_skipping: "same_content_newer"
           skip_after_successful_duplicate: "true"
@@ -120,14 +120,14 @@ jobs:
 
       - name: Install toolchain
         if: ${{ steps.skip_check.outputs.should_skip != 'true' }}
-        uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af
+        uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: ${{ matrix.triple.rust }}
           override: true
           target: ${{ matrix.triple.target }}
 
-      - uses: Swatinem/rust-cache@22c9328bcba27aa81a32b1bef27c7e3c78052531
+      - uses: Swatinem/rust-cache@v1
         if: ${{ steps.skip_check.outputs.should_skip != 'true' }}
         with:
           key: ${{ matrix.triple.target }}
