--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,7 +5,7 @@
 # - https://github.com/BurntSushi/ripgrep/blob/master/.github/workflows/ci.yml
 # - https://github.com/ClementTsang/bottom/blob/master/.github/workflows/ci.yml
 
-name: ci
+name: CI
 
 on:
   workflow_dispatch:
