--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -90,20 +90,14 @@ jobs:
           - {
             os: "ubuntu-latest",
             target: "x86_64-unknown-linux-gnu",
-            cross: false,
-            rust: stable,
           }
           - {
             os: "macOS-latest",
             target: "x86_64-apple-darwin",
-            cross: false,
-            rust: stable,
           }
           - {
             os: "windows-latest",
             target: "x86_64-pc-windows-msvc",
-            cross: false,
-            rust: stable,
           }
 
     steps:
@@ -123,7 +117,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: ${{ matrix.triple.rust }}
+          toolchain: stable
           override: true
           target: ${{ matrix.triple.target }}
 
