--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 tracing-appender = "0.2"
 zendesk = { git = "https://github.com/darbiadev/zendesk-rs" }
+shelby = { git = "https://github.com/darbiadev/shelby" }
 figment = { version = "0.10.8", features = ["env", "toml"] }
 dirs = "4.0.0"
 futures = "0.3.25"
