--- a/.github/workflows/rust-ci.yaml
+++ b/.github/workflows/rust-ci.yaml
@@ -19,20 +19,16 @@ jobs:
     strategy:
       matrix:
         triple:
-          - {
-            os: "ubuntu-latest",
-            target: "x86_64-unknown-linux-gnu",
-          }
-          - {
-            os: "macOS-latest",
-            target: "x86_64-apple-darwin",
-          }
-          - {
-            os: "windows-latest",
-            target: "x86_64-pc-windows-msvc",
-          }
+          - { os: "ubuntu-latest", target: "x86_64-unknown-linux-gnu" }
 
     uses: darbiadev/.github/.github/workflows/rust-test.yaml@9160d4ddd590c15fe8a1f6d1704bf8806969d2b6 # v4.0.1
     with:
       os: ${{ matrix.triple.os }}
       target: ${{ matrix.triple.target }}
+
+  docs:
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    uses: darbiadev/.github/.github/workflows/github-pages-rust-doc.yaml@9160d4ddd590c15fe8a1f6d1704bf8806969d2b6 # v4.0.1
