--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "fido"
 description = "Internal CLI used for automation and testing"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 authors = ["Bradley Reynolds <bradley.reynolds@darbia.dev>"]
 license = "MIT"
 readme = "README.md"
@@ -13,18 +13,18 @@ categories = ["command-line-utilities"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.41.0", features = ["full"] }
-clap = { version = "4.5.20", features = ["cargo"] }
-clap_complete = "4.5.35"
+tokio = { version = "1.47.1", features = ["full"] }
+clap = { version = "4.5.42", features = ["cargo"] }
+clap_complete = "4.5.55"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.12", features = ["json"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 tracing-appender = "0.2"
 zendesk = { git = "https://github.com/darbiadev/zendesk-rs" }
 shelby = { git = "https://github.com/darbiadev/shelby", version = "0.1.0" }
 figment = { version = "0.10.19", features = ["env", "toml"] }
-dirs = "5.0.1"
+dirs = "6.0.0"
 futures = "0.3.31"
-pyo3 = { version = "0.20.3", features = ["auto-initialize"] }
+pyo3 = "0.25.1"
